# agentic-demo

./: .env.example  .gitignore  DEMO.md  KAGENT-DEMO.md  README.md  SUBSTRATE-DEMO.md  demo.sh  kagent-demo.sh  port-forward.sh  setup-substrate.sh  setup.sh  substrate-demo.sh  teardown-substrate.sh  teardown.sh
agents-src/weatherwise/: Dockerfile  README.md  pyproject.toml
agents-src/weatherwise/weatherwise/: __init__.py  agent-card.json  agent.py
manifests/: README.md
manifests/agentregistry/: access-policies.yaml  agents.yaml  arctl-helper.yaml  deployments.yaml  everything-mcp-direct.yaml  everything-mcp-promoted.yaml  mcp-gateway.yaml  mcp-servers.yaml  runtime.yaml  weatherwise-agent.yaml
manifests/agw-advanced/: 01-eager-auth.yaml  02-prompt-policies.yaml  03-openapi-to-mcp.yaml  04-code-mode.yaml
manifests/infrastructure/: agentgateway-gateway.yaml  agentgateway-parameters.yaml  istiod-alias.yaml  keycloak-realm.yaml  keycloak.yaml  service-mesh-controller.yaml
manifests/kagent/: modelconfigs.yaml  remote-mcp-servers.yaml
manifests/kagent-demo/: 01-tool-server-weather.yaml  02-helpdesk-weather.yaml  03-tool-server-github.yaml  04-helpdesk-add-github.yaml
manifests/llm-providers/: anthropic.yaml  openai.yaml
manifests/mcp-servers/: everything-server.yaml  github-profile-composable.yaml  github-remote.yaml  routes.yaml  virtual-mcp.yaml  weather-composable.yaml  website-fetcher.yaml
manifests/observability/: agentgateway-tracing.yaml  llm-retry-policy.yaml
manifests/security/: agw-sts-token-rbac.yaml  github-elicitation-policy.yaml
(+6 files in other folders)
